--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -1,20 +1,20 @@
 \chapter{引言}
 \label{cha:intro}
 
-这是 \thuthesis\cite{thuthesis} 的示例文档，基本上覆盖了模板中所有格式的设置。建
-议大家在使用模板之前，除了阅读《\thuthesis{}用户手册》，这个示例文档也最好能看一
-看。
-
-小老鼠偷吃热凉粉；短长虫环绕矮高粱\footnote{韩愈（768-824），字退之，河南河阳（
-  今河南孟县）人，自称郡望昌黎，世称韩昌黎。幼孤贫刻苦好学，德宗贞元八年进士。曾
-  任监察御史，因上疏请免关中赋役，贬为阳山县令。后随宰相裴度平定淮西迁刑部侍郎，
-  又因上表谏迎佛骨，贬潮州刺史。做过吏部侍郎，死谥文公，故世称韩吏部、韩文公。是
-  唐代古文运动领袖，与柳宗元合称韩柳。诗力求险怪新奇，雄浑重气势。}。
+等离子体激发器由于具有响应时间短，安装方便，耗能低，器件小等众多优点，近些年得到了流动控制领域研究者们的青睐。本文主要研究了介质阻挡放电（dielectric barrier discharge，DBD）等离子体激发器在湍流减阻方面的应用。研究主要分为两个部分，分别是通过推迟转捩降低湍流阻力和通过改变充分发展湍流的相干结构降低湍流阻力。引言部分将会先介绍我们所采用的等离子体激发器，然后再分别综述这两种控制方法的研究现状。
 
 
-\section{介质阻挡放电等离子体激发器简介}
-简单的介绍一下介质阻挡放电等离子体激发器的结构与工作机理
-\subsection{介质阻挡放电等离子体激发器数值模拟方法}
+\section{介质阻挡放电等离子体激发器}
+
+最早在文献中记载介质阻挡放电等离子体激发器的Masuda和Washizu\cite{Masuda1979}。之后再1998年，Roth首次将这个激发器用于流动控制\cite{Roth1998}。
+介质阻挡放电等离子体激发器由两片电击和一层绝缘层构成（如图~\ref{fig:SchematicPlasma}所示）。当在两片电极上加上高电压时，两片电击之间的空气就会被电离。在电场的作用下，带电的离子会做定向运动，并通过与不带电的空气分子的碰撞作用，将动量转移到空气分子上。从宏观的角度看，等离子体激发器在开启时会产生图示方向的射流。
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{plasma}
+  \caption{等离子体激发器示意图\cite{Whalley2012}}\label{fig:SchematicPlasma}
+\end{figure}
+
+\subsection{介质阻挡放电等离子体激发器数值模拟模型}
 介质阻挡放电等离子体激发器数值模拟方法
 %封面的例子请参看 \texttt{cover.tex}。主要符号表参看 \texttt{denation.tex}，附录和
 %个人简历分别参看 \texttt{appendix01.tex} 和 \texttt{resume.tex}。里面的命令都很直
