--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -222,3 +222,43 @@
   lang =        {zh},
   year =        2017,
 }
+
+@article{Whalley2012,
+   author = {Whalley, Richard D. and Choi, Kwing-So},
+   title = {The starting vortex in quiescent air induced by dielectric-barrier-discharge plasma},
+   journal = {Journal of Fluid Mechanics},
+   volume = {703},
+   pages = {192-203},
+   ISSN = {0022-1120
+1469-7645},
+   DOI = {10.1017/jfm.2012.206},
+   year = {2012},
+   type = {Journal Article}
+}
+
+@article{Masuda1979,
+   author = {Masuda, Senichi and Washizu, Masao},
+   title = {Ionic charging of a very high resistivity spherical particle},
+   journal = {Journal of Electrostatics},
+   volume = {6},
+   number = {1},
+   pages = {57-67},
+   ISSN = {0304-3886},
+   DOI = {https://doi.org/10.1016/0304-3886(79)90024-X},
+   url = {http://www.sciencedirect.com/science/article/pii/030438867990024X},
+   year = {1979},
+   type = {Journal Article}
+}
+@inbook{Roth1998,
+   author = {Roth, J. and Sherman, Daniel and Wilkinson, Stephen},
+   title = {Boundary layer flow control with a one atmosphere uniform glow discharge surface plasma},
+   booktitle = {36th AIAA Aerospace Sciences Meeting and Exhibit},
+   series = {Aerospace Sciences Meetings},
+   publisher = {American Institute of Aeronautics and Astronautics},
+   note = {doi:10.2514/6.1998-328},
+   DOI = {doi:10.2514/6.1998-328
+10.2514/6.1998-328},
+   url = {https://doi.org/10.2514/6.1998-328},
+   year = {1998},
+   type = {Book Section}
+}
