--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -1,13 +1,12 @@
 \chapter{引言}
 \label{cha:intro}
 
-等离子体激发器由于具有响应时间短，安装方便，耗能低，器件小等众多优点，近些年得到了流动控制领域研究者们的青睐。本文主要研究了介质阻挡放电（dielectric barrier discharge，DBD）等离子体激发器在湍流减阻方面的应用。研究主要分为两个部分，分别是通过推迟转捩降低湍流阻力和通过改变充分发展湍流的相干结构降低湍流阻力。引言部分将会先介绍我们所采用的等离子体激发器，然后再分别综述这两种控制方法的研究现状。
+等离子体激发器由于具有响应时间短，安装方便，耗能低，器件小等众多优点，近些年得到了流动控制领域研究者们的青睐。本文主要研究了介质阻挡放电（dielectric barrier discharge，DBD）等离子体激发器在湍流减阻方面的应用。研究主要分为两个部分，分别是通过推迟转捩降低阻力和通过改变充分发展湍流的相干结构降低阻力。引言部分将会先介绍我们所采用的等离子体激发器，然后再分别综述这两种控制方法的研究现状。
 
 
 \section{介质阻挡放电等离子体激发器}
 
-最早在文献中记载介质阻挡放电等离子体激发器的Masuda和Washizu\cite{Masuda1979}。之后再1998年，Roth首次将这个激发器用于流动控制\cite{Roth1998}。
-介质阻挡放电等离子体激发器由两片电击和一层绝缘层构成（如图~\ref{fig:SchematicPlasma}所示）。当在两片电极上加上高电压时，两片电击之间的空气就会被电离。在电场的作用下，带电的离子会做定向运动，并通过与不带电的空气分子的碰撞作用，将动量转移到空气分子上。从宏观的角度看，等离子体激发器在开启时会产生图示方向的射流。
+介质阻挡放电等离子体激发器由两片电击和一层绝缘层构成（如图~\ref{fig:SchematicPlasma}所示）。当在两片电极上加上高电压时，两片电击之间的空气就会被电离。在电场的作用下，带电的离子会做定向运动，并通过与不带电的空气分子的碰撞作用，将动量转移到空气分子上。从宏观的角度看，等离子体激发器在开启时会产生图示方向的射流。介质阻挡放电等离子体激发器最早可以追溯到Masuda和Washizu的文章\cite{Masuda1979}。在1998年，Roth首次将其用于流动控制\cite{Roth1998}。由于本文主要是采用数值模拟的方法研究这种激发器在流动控制中的应用，所以本文将在引言的第一部分重点介绍DBD等离子体激发器的数值模拟方法与将其应用于流动控制的研究现状。
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{plasma}
