--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -6,6 +6,17 @@
 
 \section{介质阻挡放电等离子体激发器}
 
+等离子体是除了液态、固态以及气态之外的物质第四态
+[42,43]
+。按照产生温度的不同可以将其分为高温等离子体和低温等离
+子体。高温等离子体是在较高的温度条件下，促使气体迅速离解产生；低温等
+离子体则是气体在电场力的作用下电离产生，电离产生的等离子体通常由大量
+的电子和相应成对出现的离子构成。在电场的作用下，等离子体可以表现出明
+显的集体行为
+[44]
+。由于等离子体的特殊物理性能，使其在力学、化学、电子
+学等许多传统学科上得到应用，并因此产生了诸如等离子体电动力学、等离子
+体光学、等离子体化学等交叉学科。
 介质阻挡放电等离子体激发器由两片电击和一层绝缘层构成（如图~\ref{fig:SchematicPlasma}所示）。当在两片电极上加上高电压时，两片电击之间的空气就会被电离。在电场的作用下，带电的离子会做定向运动，并通过与不带电的空气分子的碰撞作用，将动量转移到空气分子上。从宏观的角度看，等离子体激发器在开启时会产生图示方向的射流。介质阻挡放电等离子体激发器最早可以追溯到Masuda和Washizu的文章\cite{Masuda1979}。在1998年，Roth首次将其用于流动控制\cite{Roth1998}。由于本文主要是采用数值模拟的方法研究这种激发器在流动控制中的应用，所以本文将在引言的第一部分重点介绍DBD等离子体激发器的数值模拟方法与将其应用于流动控制的研究现状。
 \begin{figure}
   \centering
@@ -13,19 +24,76 @@
   \caption{等离子体激发器示意图\cite{Whalley2012}}\label{fig:SchematicPlasma}
 \end{figure}
 
-\subsection{介质阻挡放电等离子体激发器数值模拟模型}
-介质阻挡放电等离子体激发器数值模拟方法
-%封面的例子请参看 \texttt{cover.tex}。主要符号表参看 \texttt{denation.tex}，附录和
-%个人简历分别参看 \texttt{appendix01.tex} 和 \texttt{resume.tex}。里面的命令都很直
-%观，一看即会\footnote{你说还是看不懂？怎么会呢？}。
+\subsection{介质阻挡放电等离子体激发器数值模拟方法}
+从目前的研究可知，介质阻挡放电等离子体的放电和气动激励过程中的各个物理过程的时间跨度较大，其中包括瞬间发生的电磁场分布过程、不足纳秒和纳秒级的电子能量传输及输运过程、微秒级的离子输运过程和毫秒级的中性气体间的动量交换及传热过程等，较大的时间跨度使得对等离子体的数值仿真存在着较大的难度。因此，许多研究者提出可以在结果合理的前提下，对等离子体气动激励这一复杂的多物理过程进行必要的简化，提出其中的主要激励机理。在现阶段，这种简化过程对研究和应用等离子体流动控制这一前沿技术是十分必要的。目前，介质阻挡放电等离子体气动激励的仿真模型主要有以下几类。
+
+等离子体简化模型唯象简化模型作为数值模拟中最为简单和常见的模型，其基本思路是将因粒子碰撞产生的动量传递效应简化为一种作用于流体的电场力，并将其以体积力源项的形式与 N-S 方程耦合求解。简化模型通常需要利用实验结果对模型中的相关参数进行修正。基于不同的假设条件，Massines
+[89]
+、Orlov
+[90]
+、Shyy
+[91]
+、
+Suzen
+[92]
+、Roth
+[93]
+分别各自提出了自己的简化模型，同时国内外的研究者在此
+类模型基础上做了大量的研究工作。Rizzetta
+[94]
+基于 Shyy 提出的简化模型，并
+利用大涡模拟数值方法研究了等离子体对湍流附面层的流动控制。毛枚良
+[95]
+等人利用简化模型，对 NACA0015 翼型进行了数值研究，探讨了大气压下辉
+光放电等离子体对边界层流动的影响。陈浮
+[96]
+等人采用三种不同的简化模型
+对比研究了 5kV 激励电压作用下的诱导流场，分析探讨了各模型的优缺点。
+王江南
+[97]
+等人进行了流动分离控制的数值模拟研究，结果表明等离子体流动
+控制方法可以有效地延迟流动的分离，达到增升减阻的目的。
+1.4.5.2 集总电路求解模型
+集总电路求解模型主要基于等离子体放电过程中的电流与电场强度的关
+系，建立起等离子体气动激励器电特性的分析模型。此类简化模型可以获得功
+率和电流随时间变化的数学表达式，以及电功率、电流和相位差对电压幅值、
+交流电频率、绝缘层厚度和介电常数等参数之间的依赖关系。该模型通过将等
+离子体激励器等效成一个集总电路原件的形式来描述等离子体气动激励器的
+行为。Orlov
+[98]
+验证了等离子体气动激励器的推力与施加在电极两端的电压成
+
 \subsection{介质阻挡放电等离子体激发器在流动控制方面的应用}
 介质阻挡放电等离子体激发器在流动控制方面的应用
 \section{通过推迟层流/湍流转捩减阻}
 \label{sec:first}
+众所周知，层流的摩擦阻力要比湍流的摩擦阻力小很多，所以流动减阻的一个重要方向就是扩大飞行器表面的层流范围。对于大型客机而言，由于机身长度过长，转捩总会无可避免的发生。相比之下，在机翼上发展和应用层流技术则有很大的前景。目前大多数客机使用的机翼还都是湍流机翼。湍流机翼发生从层流向湍流的转捩点一般在翼型弦长的10\%以前，而如果使用推迟转捩的层流技术，可以将转捩点推迟到20\%甚至70\%弦长之后。在这一小节，我们先简要介绍二维和三维边界层的失稳与转捩研究现状，最后再总结目前已经提出的转捩推迟手段。
+
 \subsection{二维边界层失稳与转捩}
-二维边界层失稳与转捩
+边界层转捩过程强烈依赖于来流条件和壁面条件，受到来流湍流度、来流马赫数、外流压力梯度、壁面温度、壁面粗糙度、壁面抽吸量及外部扰动特征参数等诸多因素的影响\ref{morkovin1969many}，因此存在着多种物理机制。
+在二维不可压缩边界层中，转捩过程可分为以下三种类型：当来流湍流度较低（小于0.1\%）时发生的是自然转捩（natural transition）\ref{papanastasiou1999viscous}；而来流湍流度较高（大于1\%）时，转捩过程中小扰动的指数增长阶段将被跳过，这被称为跨越转捩（bypass transition）\ref{jacobs2001simulations}；逆压梯度会导致层流边界层与壁面分离，从而引发分离流转捩（separation-induced transition）\ref{malkiel1995transition}；反过来，顺压梯度会使湍流边界层再层流化\ref{walker1992role}。具体地，自然转捩过程分为四个阶段\ref{bradshaw1994turbulence}：第一阶段是所谓的边界层感受性过程（Receptivity）\ref{reshotko1984environment}，指的是背景扰动如何进入边界层并产生不稳定波的机制；第二阶段是不稳定波的线性增长过程；第三阶段是不稳定波发展的非线性阶段，不稳定波发展到一定的幅值后，会出现波的相互作用和高阶不稳定性，从而导致以湍斑为特征的湍流结构的产生；最后一个阶段是从湍斑到完全湍流的发展过程。在自然转捩的第二阶段，扰动幅值相比于基本流非常小，一般采用线性稳定性理论进行描述。该理论假设扰动具有行波的形式，且不同频率，不同波长的扰动波之间不会互相干扰。基于这一假设，我们可以得到线性稳定性方程（Orr-Sommerfeld方程）[9]，并且得到不同频率和波长的扰动波的衰减或增长的情况，如图\cite{f:neutral_curve}所示。在此 图上，扰动的衰减（稳定）区和放大（不稳定）区可通过的扰动增长率等于零的线区分出来，这条线被称为中性稳定性曲线。令人特别关注的是曲线上 取最小值的点：小于此值的区域内，所有的扰动均会趋于稳定。这个最小的雷诺数被称为临界雷诺数。可见，速度剖面有拐点的边界层比没有的更不稳定，而且后者在 时仍存在不稳定频带，因此也被称为具有“无粘不稳定性”的剖面。实际上，上述频带可通过求解Rayleigh方程[10]得到，此方程是Orr-Sommerfeld方程在 时的简化形式，基于此方程的理论被称为“无粘稳定性理论”。无粘稳定性理论中的拐点定理指出拐点的存在是流动失稳的充分必要条件。
+\begin{figure}
+  \centering
+  \includegraphics[width=0.5\textwidth]{neutral_curve}
+  \caption{二维边界层中二维扰动的中性稳定性曲线，引自[10]。图中，a曲线对应的是具有拐点PI的速度剖面a，而b曲线对应的是无拐点的速度剖面b。}\label{f:neutral_curve}
+\end{figure}
+
 \subsection{三维边界层失稳与转捩}
-三维边界层失稳与转捩
+三维边界层转捩的研究起始于后掠层流机翼设计项目[11]，其目标是大幅降低机翼阻力。几十年来航空界一直致力于这一项目，然而由于三维边界层的稳定性涉及到边界层对自由流中的扰动与机翼表面粗糙度的感受性、基频扰动及其谐波与驻涡（crossflow vortices）等多种模态之间的相互作用等诸多问题，目前的研究与实际应用还有着相当的距离。
+三维不可压缩边界层具有多种失稳机制，其中横流不稳定性起主导作用。图2.2显示了后掠机翼上的层流边界层流动。可见，由于沿机翼弦向压力梯度的存在，边界层外缘流线将发生扭曲，或者认为此处流体微团曲线运动产生的离心力与压力平衡。而在边界层内，流体微团的速度沿壁面法向逐渐减小，因此其产生的离心力减小，而压力却保持不变，这种不平衡性导致了垂直于主流方向的横流（crossflow velocity）的出现。
+横流速度剖面存在拐点并因此产生了横流不稳定波，其增长率比T-S波大得多。最不稳定波的方向几乎与势流方向垂直（85o～89o），波长是边界层厚度的三倍到四倍[13]。在极限条件时，零频率的波驻留在物面上，它们具有恒定相位线，方向近似与来流平行，被称为驻涡。横流失稳模态可分为驻涡模态与行波（traveling waves）模态两种。Malik[44]等人通过对后掠Hiemenz流动NPSE的计算得出行涡模态与驻涡模态的主导关系，他们指出当行涡模态的初始幅值小于驻涡模态初始幅值一个数量级时，驻涡模态扰动主导横流转捩；反之，转捩则由行波模态扰动引起，并且行涡会在发展过程中抑制驻涡的发展。这一计算结果与Bippes[43]年提出的低湍流情况横流驻涡主导转捩，高湍流情况横流行涡主导转捩的结论相吻合。
+由于横流失稳产生的横流涡亦是不稳定，所以在其基础之上会产生二次失稳。Malik[45]研究了后掠翼上转捩前扰动波的发展，其计算结果与Reibert[47]的实验结果符合的很好，并在此基础上研究了饱和的横流涡的二次失稳现象。他们将二次失稳的模态根据能量来源的不同分为Y模态和Z模态。下图为Y模态与Z模态的扰动幅值等值线：
+
+Z模态（上图）与Y模态（下图）
+与此同时，他们还提出了基于二次失稳理论N转捩因子的预测方法。Haynes [47]等人研究了雷诺数和曲率对于后掠翼上流动稳定性的影响，发现雷诺数越大横流涡饱和越早，雷诺数非常小时甚至不会出现横流涡的饱和现象；另外横流涡的发展对曲率的敏感性也很大。Li[48]等人对横流行涡的二次失稳也做了详细的研究，他们发现行涡的增长率相比于驻涡更大，并且在更低的幅值饱和，而二次失稳的幅值却不亚于驻涡，所以只有在行涡的初始幅值很低的时候才是驻涡主导转捩。
+由于横流失稳是导致后掠翼转捩的主要机制，所以近些年研究者们也在试图通过影响横流失稳产生扰动的发展推迟转捩。Saric[49]在试验中发现，通过采用在机翼前缘放置一排间距略小于最不稳定横流涡展向波长的粗糙单元，可以有效的推迟转捩。这是因为该粗糙单元激发出的模态本身并不会发展导致转捩，相反其还会抑制最不稳定模态，从而推迟转捩。Malik[45]的计算也给出了相同的解释。不同模态幅值在不同初始值条件下的发展如下图：
+
+其中实线是控制模态和自然模态同时存在时它们的幅值沿着流向发展的情况，虚线是只有自然模态时的情况。可以看到在有控制模态的时候自然扰动模态的发展受到了抑制。Carpenter（2008）年做了利用粗糙单元推迟转捩的飞行试验，实验发现在翼型前缘表面没有打磨得很光滑的时候该方法是有效的，2009年F.Li用NPSE进行计算也得到了相同的结果。2013年，Templemann[50]用DNS的进行模拟，同样印证了该方法的可行性。2014年Lovig[51]等人在湍流度更低的风洞（来流湍流度0.04%）中印证了这一方法，从而更加肯定了这种方法在实际飞行中的可行性。
+Friederich 和 Kloker[52]提出了一种吸气的控制方法来推迟横流诱发的转捩并在后掠平板上得到了验证。他们通过在横流涡卷起的地方向下吸气，从而破坏横流涡的结构，使得二次失稳受到抑制。这一方法还有待实验的检验以及向更加便于应用的方向改变。
+在实验方面，处于前沿的研究者为亚利桑那州立大学（ASU）的Saric、俄罗斯的Kachanov、日本宇航实验室的Tagagi以及德国宇航研究院（DLR）的Bippes。Saric[14]综述了三维不可压缩边界层的感受性、二次失稳和壁面粗糙度效应等热点问题的最新进展。
+目前，数值模拟方面使用较多的还是线性稳定性理论和NPSE方法。目前线性稳定性理论可以准确预测出驻涡模态及其波长。Reed对这方面的研究进行了总结[15]。NPSE方法的优势是其具有模拟非平行和非线性效应的能力[16]，Haynes和Reed综述了此法对几种典型的三维不可压缩边界层流动的研究结果[17]。
+直接数值模拟方面，Reed和Lin[18-19]研究了无限展长后掠翼上的转捩过程，结果与ASU的实验符合较好。Meyer和Kleiser[20]考察了横流不稳定性的驻涡模式与行波模式的扰动在后掠平板上的相互作用，他们采用与Muller和Bippes[21]的实验近似的初始条件，得到了合理的三维边界层转捩发展过程。Wintergerste和Kleiser[22]对他们的工作进行了补充，重点研究转捩后期横流涡的破碎现象。
+
 \subsection{转捩推迟方案研究进展}
 转捩推迟方案研究进展
 
